fix overflow

--- a/src/scripts/editorInner.css
+++ b/src/scripts/editorInner.css
@@ -82,6 +82,7 @@ main {
   border-radius: .5rem;
   border: 1px solid var(--border);
   height: 100%;
+  box-sizing: border-box;
 }
 
 header,
